[tool.poetry]
name = "laas-utils"
version = "0.1.2"
description = ""
authors = ["jeongsk <jeongseok@wantedlab.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.9"
langchain = "^0.3.3"
openai = "^1.53.0"
langchain-openai = "^0.2.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
