[tool.poetry]
name = "laas-utils"
version = "0.1.2"
description = ""
authors = ["jeongsk <jeongseok@wantedlab.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.11"
langchain = "^0.3.13"
openai = "^1.58.1"
langchain-openai = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
